# manyfmt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  mutants.yml
src/: formats.rs  lib.rs
tests/: misc-tests.rs
